<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity"
        android:background="@color/page_color">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminateDrawable="@drawable/progressdrawable"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="24pt"
            android:textStyle="bold"
            android:fontFamily="cursive"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_lo_username"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".5"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_on_items"
                android:textColorHint="@color/desc_on_items"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_lo_username"
            app:layout_constraintWidth_percent=".5"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/text_on_items">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/text_on_items"
                android:textColorHint="@color/desc_on_items" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/touch_targets_size"
            android:background="@drawable/shape_login_btn"
            android:text="@string/login"
            android:textColor="@color/page_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintWidth_percent=".5"
            android:layout_marginTop="24dp"/>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            android:layout_marginTop="32dp"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Female"
            app:layout_constraintStart_toStartOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="هاني"
            app:layout_constraintStart_toStartOf="@+id/radioButton2"
            app:layout_constraintTop_toBottomOf="@+id/radioButton2"
            tools:layout_editor_absoluteX="178dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>